--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<br><br><br><br><br>
 	    <form action = "" method = "POST">
 	        <b>Password</b><br>
-	        <input type = "password" name = "password" /><br>
+	        <input type = "password" name = "pass" /><br>
 	        <input type = "submit" value="LOGIN" />
 	    </form>
 	</center>
